# robot-3d-detection

./: .gitignore  README.md
configs/: g1_sensor_sim.rviz  nuscenes-mini-dataset.yaml  pointpillar-kitti-8gb.md  robot-custom-dataset.yaml  unitree-g1-deployment.yaml
data/: README.md
demo/: g1-simulation-viewer.html  project-one-pager.html
docker/: Dockerfile  Dockerfile.ros2
docs/: 01-environment-and-baseline.md  02-experiment-record.md  03-robot-data-contract.md  04-small-dataset-selection.md  05-e001-baseline-result.md  06-e002-temporal-experiment.md  07-e003-visualization.md  08-e004-ros2-deployment.md  09-e005-custom-robot-data.md  10-resume-and-interview.md  11-e006-ros2-temporal-fusion.md  12-unitree-g1-deployment.md  13-g1-field-onboarding.md  14-g1-sensor-simulation.md  15-e007-rviz-visualization.md  16-beginner-rviz-guide.md  17-e008-demo-materials.md  18-e009-stability-benchmark.md
ros2_ws/src/robot_3d_detection/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_3d_detection/launch/: g1_sensor_sim.launch.py  g1_temporal_detector.launch.py  replay_and_detect.launch.py  replay_temporal_detect.launch.py
ros2_ws/src/robot_3d_detection/resource/: robot_3d_detection
ros2_ws/src/robot_3d_detection/robot_3d_detection/: __init__.py  detection_marker_visualizer.py  nuscenes_pointcloud_replay.py  odometry_to_lidar_pose.py  pointpillar_detector.py  ros2_interface_probe.py
scripts/: bootstrap_openpcdet.sh  build_ros2_image.sh  build_training_image.sh  check_environment.sh  convert_robot_points.py  create_nuscenes_mini_config.py  eval_nuscenes_temporal.sh  (+28 more)
