<?xml version="1.0"?>
<package format="3">
  <name>robot_3d_detection</name>
  <version>0.1.0</version>
  <description>Offline ROS 2 replay and 3D object detection for nuScenes LiDAR.</description>
  <maintainer email="developer@example.invalid">robot-3d-detection</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
